--- a/templates/index.html
+++ b/templates/index.html
@@ -1,45 +1,38 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static %}
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
-  <title>Index</title>
-</head>
+{% block title %}
+Главная
+{% endblock %}
 
-<body>
+{% block content %}
 <ul class="nav nav-pills sticky-top bg-white nav-fill">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="index.html">
+    <a class="nav-link active" aria-current="djangoPage" href="index.html">
       <span style="font-weight: bold;">Главная</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="top-sellers.html"><span style="font-weight: bold;">Топ продавцов</span>
+    <a class="nav-link" href="{% url 'top-sellers' %}"><span style="font-weight: bold;">Топ продавцов</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="advertisement-post.html">
+    <a class="nav-link" href="{% url 'advertisement-post' %}">
       <span style="font-weight: bold;">Разместить объявление</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="register.html">
+    <a class="nav-link" href="{% url 'register' %}">
       <span style="font-weight: bold;">Регистрация</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="login.html">
+    <a class="nav-link" href="{% url 'login' %}">
       <span style="font-weight: bold;">Войти</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="profile.html">
+    <a class="nav-link" href="{% url 'profile' %}">
       <span style="font-weight: bold;">Профиль</span>
     </a>
   </li>
@@ -80,7 +73,7 @@
   <div class="row">
     <ul class="nav nav-tabs bg-white">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Проверенные продавцы</a>
+        <a class="nav-link active" aria-current="djangoPage" href="#">Проверенные продавцы</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Новинки</a>
@@ -194,7 +187,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav me-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="#" aria-current="page">сюда<span
+          <a class="nav-link active" href="#" aria-current="djangoPage">сюда<span
                   class="visually-hidden">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -216,7 +209,4 @@
     </div>
   </nav>
 </footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+{% endblock %}
